--- a/src/modules/PrimaryView.module.scss
+++ b/src/modules/PrimaryView.module.scss
@@ -1,10 +1,11 @@
 @import "../styles/exports";
 
 @mixin columnView {
+  position: relative;
   width: 685px;
-  height: 656px;
+  height: 710px;
   border-radius: 50px;
-  padding: 38px 30px 70px 30px;
+  padding: 38px 30px 99px 30px;
   display: flex;
   flex-direction: column;
 }
@@ -31,13 +32,43 @@
 }
 
 .primaryViewInner {
+  position: relative;
+
   display: flex;
   column-gap: 30px;
+  &__human {
+    position: absolute;
+    top: 217px;
+    left: 349px;
+  }
 }
 
 .viewLeftColumn {
   @include columnView();
   background: $blueLinear-color;
+
+  .leftColumnIllustration {
+    display: flex;
+
+    &__text {
+      font-family: "Inter";
+      font-size: 28px;
+      font-weight: 500;
+      font-style: italic;
+      color: $blue-color;
+      line-height: 24.37px;
+      transform: rotate(-12deg);
+      position: absolute;
+      bottom: 296px;
+      left: 295px;
+    }
+
+    &__img {
+      position: absolute;
+      bottom: 199px;
+      left: 137px;
+    }
+  }
 
   &__title {
     @include title-text();
@@ -68,5 +99,21 @@
     button {
       max-width: 382px;
     }
+  }
+
+  .rightColumnItalic {
+    text-align: center;
+    position: absolute;
+    bottom: 309px;
+    left: 189px;
+    font-family: "Inter";
+    font-weight: 500;
+    font-style: italic;
+    font-size: 24px;
+    line-height: 20.89px;
+    color: $orange-color;
+    width: 306px;
+    letter-spacing: -0.025rem;
+    transform: rotate(-12.57deg);
   }
 }
