--- a/src/widgets/Navigation/Navigation.module.scss
+++ b/src/widgets/Navigation/Navigation.module.scss
@@ -1,4 +1,5 @@
-@import "../../styles/exports";
+// @import "../../styles/exports";
+@import "../../app/styles/exports";
 
 .navigationWrapper {
   padding-top: 42px;
