--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -1,5 +1,17 @@
+@import "./vars";
+
 @mixin container {
   max-width: 1400px;
   width: 100%;
   margin: 0 auto;
+}
+
+@mixin page-title {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 43.2px;
+  letter-spacing: -0.4px;
+  color: $blue-color;
 }
