--- a/src/widgets/home/primary/PrimaryView.module.scss
+++ b/src/widgets/home/primary/PrimaryView.module.scss
@@ -1,4 +1,4 @@
-@import "../../app/styles/exports";
+@import "../../../app/styles/exports";
 @mixin columnView {
   position: relative;
   width: 685px;
@@ -24,6 +24,7 @@
 
 .primaryViewWrapper {
   margin-top: 40px;
+  height: 855.25px;
 }
 
 .container {
