--- a/src/widgets/home/aboutUs/components/solutionCard/SolutionCard.module.scss
+++ b/src/widgets/home/aboutUs/components/solutionCard/SolutionCard.module.scss
@@ -5,4 +5,22 @@
   height: 333px;
   border: 3px solid $blue-color;
   border-radius: 50px;
+  padding: 34px 34px 57px 53px;
+
+  .solutionCardTitle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 23px;
+
+    &__label {
+      @include home-card-label;
+      color: $blue-color;
+    }
+  }
+
+  &__text {
+    @include home-card-text;
+    color: $blue-color;
+  }
 }
