--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -6,6 +6,12 @@
   margin: 0 auto;
 }
 
+@mixin flex-between-center {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 @mixin page-title {
   font-family: "Inter";
   font-style: normal;
