--- a/src/widgets/home/aboutUs/AboutUs.module.scss
+++ b/src/widgets/home/aboutUs/AboutUs.module.scss
@@ -13,6 +13,9 @@
     text-align: center;
     margin: 0 auto;
     width: 1081px;
-    margin-bottom: 126px;
+  }
+
+  .aboutUsCards {
+    display: flex;
   }
 }
