--- a/src/widgets/home/aboutUs/components/additionalCard/Additional.module.scss
+++ b/src/widgets/home/aboutUs/components/additionalCard/Additional.module.scss
@@ -6,6 +6,7 @@
   background-color: #ffe7d1;
   border-radius: 50px;
   padding: 35px 34px 63px 55px;
+  margin-top: 45px;
   &__text {
     @include home-card-text;
     color: $orange-color;
