--- a/src/widgets/home/aboutUs/components/solutionCard/SolutionCard.module.scss
+++ b/src/widgets/home/aboutUs/components/solutionCard/SolutionCard.module.scss
@@ -6,6 +6,7 @@
   background-color: #cfe5ff;
   border-radius: 50px;
   padding: 34px 34px 51px 53px;
+  margin-top: 75px;
 
   &__text {
     width: 356px;
