--- a/src/widgets/home/aboutUs/components/problemCard/ProblemCard.module.scss
+++ b/src/widgets/home/aboutUs/components/problemCard/ProblemCard.module.scss
@@ -6,6 +6,7 @@
   border: 3px solid $blue-color;
   border-radius: 50px;
   padding: 34px 34px 57px 53px;
+  margin-top: 126px;
 
   .solutionCardTitle {
     display: flex;
