--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -20,6 +20,18 @@
   line-height: 43.2px;
   letter-spacing: -0.025em;
   color: $blue-color;
+
+  span {
+    background-color: $blue-color;
+    color: #fff;
+    border-radius: 22px;
+    display: inline-flex;
+    align-items: center;
+    line-height: 43.2px;
+    justify-content: center;
+    width: fit-content;
+    padding: 5px 18px 12px 20px;
+  }
 }
 
 @mixin home-card-label {
