--- a/src/app/styles/_vars.scss
+++ b/src/app/styles/_vars.scss
@@ -1,5 +1,8 @@
 $blue-color: #013878;
 $orange-color: #fd7900;
+$lightBlue-color-1: #cfe5ff;
+$lightBlue-color-2: #e7f2ff;
+$skyBlue-color: #f3f8ff;
 
 $blueLinear-color: linear-gradient(180deg, #cce4ff 0%, #ffffff 100%);
 $orangeLinear-color: linear-gradient(180deg, #ffe5cd 0%, #ffffff 100%);
