Универсальный компонент List

--- a/src/widgets/home/advantages/components/BlueCard/BlueCard.module.scss
+++ b/src/widgets/home/advantages/components/BlueCard/BlueCard.module.scss
@@ -1,6 +1,7 @@
 @import "../../../../../app/styles/exports";
 
 .blueCardWrapper {
+  height: 221px;
   padding: 33px 31px 33px 33px;
   border-radius: 50px;
   background: $blueLinear-color;
