--- a/src/widgets/home/advantages/components/WhiteCard/WhiteCard.module.scss
+++ b/src/widgets/home/advantages/components/WhiteCard/WhiteCard.module.scss
@@ -2,8 +2,9 @@
 
 .whiteCardWrapper {
   height: 173px;
-  padding: 33px 42px 10px 33px;
-  border: 3px solid $blue-color;
+  padding: 33px 0px 10px 33px;
+  border: 2px solid $blue-color;
+  color: $blue-color;
   background-color: #fff;
   border-radius: 50px;
   font-family: "Inter";
