--- a/src/shared/MyButton/MyButton.module.scss
+++ b/src/shared/MyButton/MyButton.module.scss
@@ -5,7 +5,7 @@
   border: none;
   outline: none;
   cursor: pointer;
-  border-radius: 35px;
+  border-radius: 40px;
 }
 
 .primaryContained {
@@ -26,6 +26,7 @@
 
 // size
 .large {
+  height: 78px;
   font-size: 28px;
   padding: 21px 0px 24px 0px;
   font-weight: 600;
