--- a/src/shared/UI/MyInput/MyInput.module.scss
+++ b/src/shared/UI/MyInput/MyInput.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 70px;
   border: 3px solid $blue-color;
+  border-radius: 30px;
   color: $blue-color;
   font-size: 20px;
   font-weight: 600;
