--- a/src/widgets/Footer/Footer.module.scss
+++ b/src/widgets/Footer/Footer.module.scss
@@ -1,8 +1,15 @@
 @import "../../app/styles/exports";
 
 .footer {
+  position: relative;
   .container {
     @include container;
+  }
+
+  &__yura {
+    position: absolute;
+    right: 37%;
+    bottom: 0;
   }
 }
 
