--- a/src/widgets/Footer/components/SupportedBy/SupportedBy.module.scss
+++ b/src/widgets/Footer/components/SupportedBy/SupportedBy.module.scss
@@ -1,12 +1,24 @@
 @import "../../../../app/styles/exports";
 
 .supportedByWrapper {
+  position: relative;
   @include center;
   flex-direction: column;
   width: 308px;
   height: 341px;
-  border-radius: 50px 50px 0px 0px;
-  border: 3px solid #cce4ff;
+
+  &::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 50px 50px 0px 0px;
+    padding: 3px;
+    background: $blueLinear-color;
+    -webkit-mask: linear-gradient(#fff 0 0) content-box,
+      linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
+  }
 
   &__logo {
     margin-right: 25px;
