--- a/src/widgets/Home/Primary/PrimaryView.module.scss
+++ b/src/widgets/Home/Primary/PrimaryView.module.scss
@@ -1,12 +1,19 @@
 @import "../../../app/styles/exports";
+
 @mixin columnView {
   position: relative;
   width: 685px;
   height: 710px;
   border-radius: 50px;
-  padding: 38px 30px 99px 30px;
+  padding: 40px 30px 90px 30px;
   display: flex;
   flex-direction: column;
+}
+
+@mixin columnView-mobile {
+  width: 300px;
+  height: 210px;
+  border-radius: 20px;
 }
 
 @mixin title-text {
@@ -14,6 +21,11 @@
   font-size: 48px;
   line-height: 43.2px;
   font-weight: 600;
+}
+
+@mixin title-mobile {
+  font-size: 20px;
+  line-height: 18px;
 }
 
 @mixin button {
@@ -33,9 +45,9 @@
 
 .primaryViewInner {
   position: relative;
-
   display: flex;
   column-gap: 30px;
+
   &__human {
     position: absolute;
     top: 217px;
@@ -52,21 +64,24 @@
 
     &__text {
       font-family: "Inter";
-      font-size: 28px;
+      font-size: 22px;
       font-weight: 500;
       font-style: italic;
       color: $blue-color;
-      line-height: 24.37px;
+      line-height: 19px;
       transform: rotate(-12deg);
+      width: 290.2px;
+
       position: absolute;
-      bottom: 293.66px;
-      left: 295.86px;
+      bottom: 371px;
+      left: 120px;
     }
 
     &__img {
       position: absolute;
-      bottom: 198.78px;
-      left: 137.62px;
+      bottom: 228.78px;
+      left: 10px;
+      transform: rotate(-42.02deg);
     }
   }
 
@@ -102,18 +117,58 @@
   }
 
   .rightColumnItalic {
-    text-align: center;
     position: absolute;
-    bottom: 309px;
-    left: 189px;
+    bottom: 346px;
+    left: 216px;
     font-family: "Inter";
     font-weight: 500;
     font-style: italic;
-    font-size: 24px;
-    line-height: 20.89px;
+    font-size: 22px;
+    line-height: 19px;
     color: $orange-color;
-    width: 306px;
+    width: 275px;
     letter-spacing: -0.025rem;
-    transform: rotate(-12.57deg);
+    transform: rotate(12.57deg);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    @include container-mobile;
+  }
+
+  .primaryViewInner {
+    flex-direction: column;
+
+    &__human {
+      width: 173px;
+      height: 227px;
+    }
+  }
+
+  .viewLeftColumn {
+    @include columnView-mobile;
+
+    .leftColumnIllustration {
+      &__text {
+        font-size: 11px;
+        line-height: 9.57px;
+      }
+    }
+
+    &__title {
+      @include title-mobile;
+    }
+  }
+
+  .viewRightColumn {
+    @include columnView-mobile;
+    .rightColumnItalic {
+      font-size: 11px;
+      line-height: 9.57px;
+    }
+    &__title {
+      @include title-mobile;
+    }
   }
 }
