--- a/src/widgets/Navigation/Navigation.module.scss
+++ b/src/widgets/Navigation/Navigation.module.scss
@@ -36,6 +36,12 @@
   display: none;
 }
 
+@media screen and (max-width: 1440px) {
+  .container {
+    @include container-1440;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .container {
     @include container-mobile;
