--- a/src/features/ContactForm/ContactForm.module.scss
+++ b/src/features/ContactForm/ContactForm.module.scss
@@ -1,7 +1,7 @@
 @import "../../app/styles/exports";
 
 .contactForm {
-  width: 606px;
+  max-width: 606px;
   height: 625px;
   border: 3px solid $blue-color;
   border-radius: 50px;
