--- a/src/widgets/Home/AboutUs/components/lawyerAssistant/LawyerAssistant.module.scss
+++ b/src/widgets/Home/AboutUs/components/lawyerAssistant/LawyerAssistant.module.scss
@@ -46,3 +46,14 @@
     }
   }
 }
+
+@media screen and (max-width: 1440px) {
+  .lawyerAssistantWrapper {
+    .lawyerAssistantCards {
+      .lawyerTopCard,
+      .lawyerBottomCard {
+        width: 584px;
+      }
+    }
+  }
+}
