About us - 1440px

--- a/src/widgets/Home/AboutUs/components/additionalCard/Additional.module.scss
+++ b/src/widgets/Home/AboutUs/components/additionalCard/Additional.module.scss
@@ -24,3 +24,12 @@
     color: $orange-color;
   }
 }
+
+
+// === media ===
+
+@media screen and (max-width: 1440px) {
+  .additionalCardWrapper {
+    width: 437px;
+  } 
+}
