почему юра - 1440px

--- a/src/widgets/Home/AboutUs/components/lawyerAssistant/LawyerAssistant.module.scss
+++ b/src/widgets/Home/AboutUs/components/lawyerAssistant/LawyerAssistant.module.scss
@@ -47,12 +47,13 @@
   }
 }
 
+// === media ===
 @media screen and (max-width: 1440px) {
   .lawyerAssistantWrapper {
     .lawyerAssistantCards {
       .lawyerTopCard,
       .lawyerBottomCard {
-        width: 584px;
+        width: 577px;
       }
     }
   }
