--- a/src/widgets/Home/Advantages/Advantages.module.scss
+++ b/src/widgets/Home/Advantages/Advantages.module.scss
@@ -6,6 +6,7 @@
 
 .advantagesWrapper {
   padding-bottom: 180px;
+
   &__title {
     @include page-title();
     max-width: 590px;
@@ -56,8 +57,26 @@
     }
   }
 }
+
+.cardsList {
+  display: flex;
+}
+
 @media screen and (max-width: 1440px) {
   .container {
     @include container-1440;
+  }
+
+  .whiteCardLeft, 
+  .blueCardLeft {
+    width: 433px;
+  } 
+  .whiteCardMiddle, 
+  .blueCardMiddle {
+    width: 376px;
+  }
+  .whiteCardRight, 
+  .blueCardRight {
+    width: 442px;
   }
 }
