--- a/src/widgets/Home/Advantages/components/WhiteCard/WhiteCard.module.scss
+++ b/src/widgets/Home/Advantages/components/WhiteCard/WhiteCard.module.scss
@@ -2,7 +2,7 @@
 
 .whiteCardWrapper {
   min-height: 173px;
-  padding: 33px 0px 10px 33px;
+  padding: 33px 24px 10px 33px;
   border: 2px solid $blue-color;
   color: $blue-color;
   background-color: #fff;
@@ -11,7 +11,13 @@
   font-size: 30px;
   font-weight: 600;
   line-height: 27px;
+  letter-spacing: -0.025em;
 }
 
+// === media ===
 @media screen and (max-width: 1440px) {
+  .whiteCardWrapper {
+    padding-left: 27px;
+    padding-right: 20px;
+  }
 }
