--- a/src/app/styles/_vars.scss
+++ b/src/app/styles/_vars.scss
@@ -8,4 +8,4 @@ $blueLinear-color: linear-gradient(180deg, #cce4ff 0%, #ffffff 100%);
 $orangeLinear-color: linear-gradient(180deg, #ffe5cd 0%, #ffffff 100%);
 
 // Контейнеры
-$mobile-container: 300px;
+$mobile-container-width: 450px;
