--- a/src/widgets/Home/AboutUs/AboutUs.module.scss
+++ b/src/widgets/Home/AboutUs/AboutUs.module.scss
@@ -34,3 +34,13 @@
     @include container-1440;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .container {
+    @include container-mobile;
+  }
+
+  .aboutUsCards {
+    flex-direction: column;
+  }
+}
