--- a/src/widgets/Navigation/Navigation.module.scss
+++ b/src/widgets/Navigation/Navigation.module.scss
@@ -75,8 +75,12 @@
     width: 94.24px;
     height: 67.69px;
   }
-  .navigationLinks,
+
   .navigationEntrance {
     display: none;
+  }
+
+  .navigationLinks {
+      display: none;
   }
 }
