--- a/src/widgets/Home/AboutUs/components/solutionCard/SolutionCard.module.scss
+++ b/src/widgets/Home/AboutUs/components/solutionCard/SolutionCard.module.scss
@@ -64,6 +64,10 @@
 
   .solutionCardTitle {
     margin-bottom: 8px;
+
+    &__label {
+      @include home-card-label-mobile;
+    }
     img {
       width: 45px;
       height: 45px;
