--- a/src/widgets/Home/AboutUs/components/lawyerAssistant/LawyerAssistant.module.scss
+++ b/src/widgets/Home/AboutUs/components/lawyerAssistant/LawyerAssistant.module.scss
@@ -12,6 +12,15 @@
   letter-spacing: -0.025em;
 }
 
+@mixin card-mobile {
+  width: 337px;
+  height: 123px;
+  padding: 21px 28px 21px 34px;
+  font-size: 18px;
+  line-height: 16px;
+  border-radius: 30px;
+}
+
 .lawyerAssistantWrapper {
   position: relative;
   width: 100%;
@@ -30,6 +39,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+
     .lawyerTopCard {
       @include card;
       background: linear-gradient(180deg, #cce4ff 0%, #ffffff 100%);
@@ -47,6 +57,10 @@
   }
 }
 
+.lawyerMobile {
+  display: none;
+}
+
 // === media ===
 @media screen and (max-width: 1440px) {
   .lawyerAssistantWrapper {
@@ -54,6 +68,44 @@
       .lawyerTopCard,
       .lawyerBottomCard {
         width: 577px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .lawyerAssistantWrapper {
+    width: 450px;
+    height: 446px;
+    margin-top: 84px;
+
+    &__assistant {
+      display: none;
+    }
+
+    .lawyerMobile {
+      display: inline-block;
+      position: absolute;
+      right: 0;
+      top: -20px;
+      z-index: 0;
+    }
+
+    .lawyerAssistantCards {
+      align-items: flex-start;
+      justify-content: flex-end;
+      height: 100%;
+      transform: translateY(10px);
+      .lawyerTopCard {
+        @include card-mobile;
+        z-index: 3;
+      }
+
+      .lawyerBottomCard {
+        @include card-mobile;
+        height: 113px;
+        transform: translateY(0px);
+        z-index: 3;
       }
     }
   }
