--- a/src/widgets/Home/Primary/PrimaryView.module.scss
+++ b/src/widgets/Home/Primary/PrimaryView.module.scss
@@ -11,7 +11,7 @@
 }
 
 @mixin columnView-mobile {
-  width: 450px;
+  width: 100%;
   height: 316px;
   border-radius: 20px;
   padding: 0;
@@ -157,6 +157,10 @@
 }
 
 @media screen and (max-width: 480px) {
+
+  .primaryViewWrapper {
+    padding: 0 15px;
+  }
   .container {
     @include container-mobile;
   }
@@ -197,10 +201,11 @@
   .viewRightColumn {
     @include columnView-mobile;
     margin-top: 18px;
+
     .rightColumnItalic {
       width: 207px;
-      top: 150px;
-      left: 193px;
+      top: 150px; // 150
+      left: 35%; // 193
       font-size: 16px;
       line-height: 13.92px;
       transform: rotate(-13deg);
