--- a/src/widgets/Home/AboutUs/components/additionalCard/Additional.module.scss
+++ b/src/widgets/Home/AboutUs/components/additionalCard/Additional.module.scss
@@ -36,13 +36,14 @@
 
 @media screen and (max-width: 480px) {
   .additionalCardWrapper {
-    height: 229px;
+    width: 100%;
+    height: 100%;
     margin-top: 22px;
     padding: 30px 30px 48px 33px;
 
     &__text {
       @include home-card-text-mobile;
-      width: 348px;
+      max-width: 348px;
     }
 
     .additionalCardTitle {
