--- a/src/widgets/Home/AboutUs/components/lawyerAssistant/LawyerAssistant.module.scss
+++ b/src/widgets/Home/AboutUs/components/lawyerAssistant/LawyerAssistant.module.scss
@@ -75,7 +75,7 @@
 
 @media screen and (max-width: 480px) {
   .lawyerAssistantWrapper {
-    width: 450px;
+    width: 100%;
     height: 446px;
     margin-top: 84px;
 
@@ -86,7 +86,7 @@
     .lawyerMobile {
       display: inline-block;
       position: absolute;
-      right: 0;
+      right: -15px;
       top: -20px;
       z-index: 0;
     }
@@ -96,6 +96,7 @@
       justify-content: flex-end;
       height: 100%;
       transform: translateY(10px);
+
       .lawyerTopCard {
         @include card-mobile;
         z-index: 3;
