--- a/src/widgets/Home/AboutUs/components/problemCard/ProblemCard.module.scss
+++ b/src/widgets/Home/AboutUs/components/problemCard/ProblemCard.module.scss
@@ -46,13 +46,14 @@
 
 @media screen and (max-width: 480px) {
   .problemCardWrapper {
-    height: 245px;
+    width: 100%;
+    height: 100%;
     margin-top: 70px;
     padding: 30px 30px 48px 33px;
 
     &__text {
       @include home-card-text-mobile;
-      width: 348px;
+      max-width: 348px;
     }
 
     &__pointer {
