--- a/src/widgets/Home/AboutUs/components/solutionCard/SolutionCard.module.scss
+++ b/src/widgets/Home/AboutUs/components/solutionCard/SolutionCard.module.scss
@@ -2,6 +2,7 @@
 
 .solutionCardPosition {
   position: relative;
+
   &__pointer {
     position: absolute;
     top: 45px;
@@ -52,13 +53,15 @@
     }
   }
   .solutionCardWrapper {
-    height: 245px;
+    width: 100%;
+    height: 100%;
     margin-top: 22px;
     padding: 30px 30px 48px 33px;
 
     &__text {
       @include home-card-text-mobile;
-      width: 358px;
+      max-width: 358px;
+      width: auto;
     }
   }
 
