--- a/src/widgets/Navigation/Navigation.module.scss
+++ b/src/widgets/Navigation/Navigation.module.scss
@@ -51,6 +51,11 @@
 }
 
 @media screen and (max-width: 480px) {
+  .navigationWrapper {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
   .container {
     @include container-mobile;
   }
