--- a/src/shared/UI/MyButton/MyButton.module.scss
+++ b/src/shared/UI/MyButton/MyButton.module.scss
@@ -39,3 +39,13 @@
   height: 41px;
   font-weight: 600;
 }
+
+@media screen and (max-width: 480px) {
+  .small,.large {
+      font-size: 18px;
+      line-height: 16px;
+      height: auto;
+      padding: 15px 65px;
+      font-weight: 500;
+  }
+}
