--- a/src/widgets/Home/Advantages/components/WhiteCard/WhiteCard.module.scss
+++ b/src/widgets/Home/Advantages/components/WhiteCard/WhiteCard.module.scss
@@ -21,3 +21,15 @@
     padding-right: 20px;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .whiteCardWrapper {
+    border-radius: 30px;
+    padding: 19px 21px 21px 22px;
+    width: auto;
+    height: auto;
+    min-height: auto;
+    font-size: 18px;
+line-height: 90%;
+  }
+}
