правки после работы над адаптивом

--- a/src/shared/Styled-Components/SectionTitle/SectionTitle.module.scss
+++ b/src/shared/Styled-Components/SectionTitle/SectionTitle.module.scss
@@ -8,6 +8,7 @@
     line-height: 43.2px;
     letter-spacing: -0.025em;
     color: $blue-color;
+    text-align: center;
 
     span {
         background-color: $blue-color;
