--- a/src/app/styles/_vars.scss
+++ b/src/app/styles/_vars.scss
@@ -10,3 +10,4 @@ $orangeLinear-color: linear-gradient(180deg, #ffe5cd 0%, #ffffff 100%);
 // Контейнеры
 $mobile-container-width: 450px;
 $width-1024: 1024px;
+$width-580: 580px;
